# Wave_Simulation

./: CMakeLists.txt  README.md  main.cpp
Simulations/: settings.cpp  settings.h  simulation.cpp  simulation.h
